# sdk-python

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  hypercorn-config.toml  project.toml  pyproject.toml  requirements.txt  setup.py  shell.darwin.nix  shell.nix  tox.ini
.claude/skills/run-sdk-tests/: SKILL.md
.github/workflows/: ai-integration.yaml  ai-sdk-bump.yaml  docker.yml  integration-cls.yaml  integration.yaml  release.yml  services.yaml  test.yml  unit-test.yaml
.tools/: run-sdk-tests.sh
ai-tests/: README.md  google_adk_model_stub.py  google_adk_service.py  google_adk_test.py  langchain_model_stub.py  langchain_service.py  langchain_test.py  model_stub.py  openai_model_stub.py  openai_service.py  openai_test.py  pydantic_model_stub.py  pydantic_service.py  pydantic_test.py  test_openai.py
etc/: run-integration-tests.sh
examples/: Dockerfile  class_based_greeter.py  client.py  concurrent_greeter.py  example.py  greeter.py  harness.py  msgspec_greeter.py  pydantic_greeter.py  pyproject.toml  random_greeter.py  requirements.txt  virtual_object.py  workflow.py
python/restate/: __init__.py  admin_client.py  asyncio.py  aws_lambda.py  client.py  client_types.py  cls.py  combinators.py  context.py  context_access.py  context_managers.py  discovery.py  endpoint.py  exceptions.py  extensions.py  handler.py  harness.py  logging.py  object.py  retry_policy.py  serde.py  server.py  server_context.py  server_types.py  service.py  types.py  vm.py  workflow.py
python/restate/ext/: __init__.py  turnstile.py
python/restate/ext/a2a/: PLAN.md  __init__.py
python/restate/ext/adk/: __init__.py  plugin.py  session.py  summarizer.py
python/restate/ext/langchain/: __init__.py  _middleware.py  _serde.py  _state.py  _stategraph.py
python/restate/ext/openai/: __init__.py  functions.py  models.py  runner_wrapper.py  session.py  utils.py
python/restate/ext/pydantic/: __init__.py  _agent.py  _model.py  _serde.py  _toolset.py  _utils.py
python/restate/ext/tracing/: __init__.py  _tracing.py
src/: example.py  lib.rs
src/restate/: __init__.py  context.py  discovery.py  endpoint.py  exceptions.py  handler.py  object.py  serde.py  server.py  server_context.py  service.py  vm.py  workflow.py
test-services/: Dockerfile  README.md  coordinator.py  counter.py  entrypoint.sh  exclusions.yaml  proxy.py  receiver.py  testservices.py
test-services-cls/: .env  Dockerfile  hypercorn-config.toml  testservices.py
test-services-cls/services/: __init__.py  awakeable_holder.py  block_and_wait_workflow.py  cancel_test.py  counter.py  failing.py  interpreter.py  kill_test.py  list_object.py  map_object.py  non_determinism.py  proxy.py  test_utils.py  virtual_object_command_interpreter.py
test-services/services/: __init__.py  awakeable_holder.py  block_and_wait_workflow.py  cancel_test.py  counter.py  failing.py  interpreter.py  kill_test.py  list_object.py  map_object.py  non_determinism.py  proxy.py  test_utils.py  virtual_object_command_interpreter.py
tests/: __init__.py  admin_client.py  disconnect_hotloop.py  ext.py  harness.py  langchain_stategraph.py  serde.py  server.py  servercontext.py  test_lifespan.py
verification/: Dockerfile  README.md  interpreter.py
