[package]
name = "restate-sdk-python-core"
version = "0.18.0"
edition = "2021"

[package.metadata.maturin]
name = "restate_sdk._internal"

[lib]
name = "restate_sdk_python_core"
crate-type = ["cdylib"]
doc = false

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
restate-sdk-shared-core = { git = "https://github.com/restatedev/sdk-shared-core.git", rev = "5127f0291bff456a515f2b8d572c4090e8ff450e", features = ["request_identity", "sha2_random_seed"] }
