[project]
name = "restate-sdk"
description = "A Python SDK for Restate"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Restate Developers", email = "dev@restate.dev" }]
readme = "README.md"
dependencies = ["typing-extensions>=4.14.0"]

[project.urls]
Homepage = "https://restate.dev"
Documentation = "https://docs.restate.dev"
Source = "https://github.com/restatedev/sdk-python"
"Bug Tracker" = "https://github.com/restatedev/sdk-python/issues"

[project.optional-dependencies]
test = ["pytest", "hypercorn"]
lint = ["mypy", "pylint"]
harness = ["testcontainers", "hypercorn", "httpx"]
serde = ["dacite", "pydantic"]

[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "restate._internal"
python-source = "python"
